--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>Mongoose Scrape</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    
     <style>
-      body { background-color: #F2F6D0 }
+      body { background-color: paleturquoise }
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -37,13 +39,13 @@
     </style>
   </head>
   <body>
-    <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+    <div class="container" id="wrapper">
+      <h1>Article Scrape</h1>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
